# cpp-basic-pracities

./: CMakeLists.txt
.cache/clangd/index/: example01.cpp.381F59DAECE5575E.idx  example02.cpp.6938738FEDCFB0F0.idx  example03.cpp.07CC98F398CB42C2.idx  example04.cpp.09344C1900BEAAB2.idx
src/basic/: example01.cpp  example02.cpp  example03.cpp  example04.cpp
